--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@ img{
   width: 40%;
   height: 25vh;
 }
-.next-button {
+button {
   background: none;
   border: none;
   cursor: pointer;
@@ -52,7 +52,25 @@ img{
   transition: transform 0.2s;
 }
 
-.next-button:hover {
+button:hover {
   transform: scale(1.1);
   color: #007bff;
+}
+.disabled-button{
+  opacity: 0.5;
+  color: gray;
+  cursor: not-allowed;
+}
+form{
+  display: flex;
+  margin-top: 5vh;
+}
+.input-correct {
+  border: 3px solid green;
+  outline: none;
+}
+
+.input-incorrect {
+  border: 3px solid red;
+  outline: none;
 }
