--- a/src/index.css
+++ b/src/index.css
@@ -38,6 +38,8 @@ h1 {
 button {
   border-radius: 8px;
   border: 1px solid transparent;
+  margin-top: 5vh;
+  margin-right: 3vw;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
@@ -45,14 +47,12 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+   outline: 4px auto -webkit-focus-ring-color;
 }
 button:hover {
   border-color: #646cff;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
+
 
 @media (prefers-color-scheme: light) {
   :root {
